add icon and box

--- a/hotell.html
+++ b/hotell.html
@@ -10,6 +10,129 @@
     <title>hotel2</title>
 </head>
 <body>
+  
+<div class="div-blur">
+<div class="header" style="display: flex; z-index: 1;opacity: 1;position: fixed;">
+  <input class="head"type="search" name="header" id="head" value="search..."></div>
 
+  <img src="mg.jpg" class="img">
+
+
+<div class="div-to">
+    <img src="booklium.jpg" class="booklium">
+    <div style="position: absolute;" class="div-unnamed">
+      <img src="unnamed.jpg" alt="unnamed" class="unnamed">
+      <p style=" margin-top: -550px;margin-left: 1000px; color: aliceblue;">check villas for the best vacation near the sea</p>
+  
+      <p style=" margin-top: -550px;margin-left: 1000px;color: aliceblue;">book villa quickly & safely</p>
+      <input type="search" class="input-in" id="in">
+        
+
+    </div>
+    <label class="label-in" for="in" >check in:</label>
+    <input type="search" class="input-in" id="in" >
+    <label class="label-on" for="on" >check on:</label>
+    <input type="search" class="input-on" id="on" >
+</div>
+
+</div>
+<div class="div-blur2">
+  <img src="mg.jpg" class="img" style="opacity: 0.5px;">
+<div class="div-black"></div>
+<div style="background-color: #423f3f;
+height: 80px;width: 60px;position: absolute;margin-top: -550px;border-radius: 5px;margin-left: 250px;">
+<i class="fas fa-home (1)"></i>
+</div>
+<div style="background-color: #423f3f;
+height: 80px;width: 60px;position: absolute;margin-top: -550px;border-radius: 5px;margin-left: 320px;">
+<i class="fas fa-fli"></i>
+
+</div>
+<div style="background-color: #423f3f;
+height: 80px;width: 60px;position: absolute;margin-top: -550px;border-radius: 5px;margin-left: 390px;">
+<i class="fas fa-ship"></i>
+
+</div>
+<div style="background-color: #423f3f;
+height: 80px;width: 60px;position: absolute;margin-top: -550px;border-radius: 5px;margin-left: 460px;">
+<i class="fas fa-car-crash"></i>
+
+</div>
+
+<div style="background-color: #423f3f;
+height: 80px;width: 60px;position: absolute;margin-top: -550px;border-radius: 5px;margin-left: 530px;">
+<i class="fas fa-search2"></i>
+
+</div>
+<div style="background-color: #423f3f;
+height: 80px;width: 60px;position: absolute;margin-top: -550px;border-radius: 5px;margin-left: 600px;">
+
+
+</div>
+
+<div style="background-color: #423f3f;
+height: 80px;width:100px;position: absolute;margin-top: -550px;border-radius: 5px;margin-left: 6700px;">
+
+<i class="fas fa-search"></i>
+</div>
+<div style="background-color: rgb(32, 32, 207);
+height: 60px;width: 100px;position: absolute;margin-top: -450px;border-radius: 5px;margin-left: 250px; text-align: center;color: aliceblue;font-size: 17px;padding-bottom: -5px;"><span style="
+  position: absolute;
+  font-size: 15px;
+  margin-right: 50px;margin-left: -13px;
+  ">Flight + Hotel</span>
+</div>
+
+
+<div style="background-color: #423f3f;
+height: 60px;width: 150px;position: absolute;margin-top: -450px;border-radius: 5px;margin-left: 350px; text-align: center;color: aliceblue;font-size: 17px;"> <span    style=" position: absolute;
+  font-size: 15px;
+  margin-right: 50px;margin-left: -13px;">Flight + Hotel </span> 
+
+</div>
+
+<div style="background-color: #423f3f;
+height: 60px;width: 150px;position: absolute;margin-top: -450px;border-radius: 5px;margin-left: 490px; text-align: center;color: aliceblue;font-size: 17px;">    <span style=" position: absolute;
+  font-size: 15px;margin-top:15px;
+  margin-left: -45px;">Flight+Car+cruises</span>
+</div>
+
+<div style="background-color: #423f3f;
+height: 60px;width: 150px;position: absolute;margin-top: -450px;border-radius: 5px;margin-left: 630px; text-align: center;color: aliceblue;font-size: 17px;"><span style=" position: absolute;
+  font-size: 15px;
+  margin-left: -30px;
+  margin-top: 15px;"> hotel+car+flight
+</span></div>
+<label for="form" style="position: absolute;margin-top: -360px;margin-left: 250px;color: #fcfeff;;">flying form</label><br>
+<input type="text" class="form" id="form" value="city or airport...." >
+
+<label for="to" style="position: absolute;margin-top: -380px;margin-left: 540px;color: #fcfeff;;">flying to</label><br>
+<input type="text" class="to" id="to" value="city or airport...." >
+
+<label for="departing" style="position: absolute; margin-top: -315px;margin-left: 250px;color: #fcfeff;;">departing </label><br>
+<input type="text" class="departing" id="departing" value="mm/dd/yyyy" >
+
+
+<label for="returning" style="position: absolute;  margin-top: -335px; margin-left: 420px;color: #fcfeff;;">returning </label><br>
+<input type="text" class="returning" id="returning" value="mm/dd/yyyy" >
+
+<label for="room" style="position: absolute;   margin-top: -350px;margin-left: 590px;color: #fcfeff;;">room</label><br>
+<input type="text" class="room" id="room" value="1 >" >
+
+<label for="adults" style="position: absolute;  margin-top: -368px;margin-left: 640px;color: #fcfeff;;">adults(18)</label><br>
+<input type="text" class="adults" id="adults" value="2  >" >
+
+<label for="child" style="position: absolute;  margin-top: -386px;margin-left: 710px;color: #fcfeff;;">adults(18)</label><br>
+<input type="text" class="child" id="child" value="0   >" >
+<br><br><input type="checkbox" style="position: absolute; margin-top:-340px;margin-left: 240px;"><label style="position: absolute; margin-top:-343px;margin-left: 265px;color:#fcfeff;">i only need a hotel for part of my stay</label>
+<span style="position: absolute; margin-top:-320px;margin-left: 250px;color:#fcfeff;">advanced options >></span>
+<span style="position: absolute; margin-top:-300px;margin-left: 250px;color:#fcfeff;">preferred class</span>
+
+<input type="text" class="coach" value="Economy/coach >>" >
+
+<input type="button" class="search" value="search" ><span style="position: absolute;  margin-top: -305px;margin-left: 1000px;color:#fcfeff;">save up to $536</span>
+<span style="position: absolute;  margin-top: -265px;margin-left: 1000px;color:#fcfeff;">book flight+hotel at the same time</span>
+
+</div>
 
     </body>
