add padding for header

--- a/hotell.html
+++ b/hotell.html
@@ -12,7 +12,16 @@
 <body>
   
 <div class="div-blur">
-<div class="header" style="display: flex; z-index: 1;opacity: 1;position: fixed;">
+
+<div class="header" style="display: flex; z-index: 1;opacity: 1;position: fixed;"><span   style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #fcfeff;margin-left: 20px;margin-top: 15px;font-size: 25px;">hotel2</span>
+  <span  style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #1453db;margin-top: 15px;margin-left: 90px;font-size: 25px;" >.com</span>
+  
+  <span style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #fcfdff;margin-top: 60px;margin-left: 20px;font-size: 15px;background-color:#3e4d6d;padding: 20px;" >Accommodations</span>   
+  <span  style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #fcfdff;margin-top: 60px;margin-left: 170px;font-size: 15px;">Flights</span>
+  <span  style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #fcfdff;margin-top: 60px;margin-left: 230px;font-size: 15px;">Car Rentals</span>
+  <span  style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #fcfdff;margin-top: 60px;margin-left: 330px;font-size: 15px;">airport Taxis</span>
+
+
   <input class="head"type="search" name="header" id="head" value="search..."></div>
 
   <img src="mg.jpg" class="img">
