--- a/hotell.html
+++ b/hotell.html
@@ -21,6 +21,10 @@
   <span  style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #fcfdff;margin-top: 65px;margin-left: 250px;font-size: 15px;">Car Rentals</span>
   <span  style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #fcfdff;margin-top: 65px;margin-left: 350px;font-size: 15px;">airport Taxis</span>
 
+  <span  style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #fcfdff;margin-top: 18px;margin-left: 1020px;font-size: 15px;">IRR</span>
+<img src="images.png" alt="img" style="width: 22px;height: 15px;margin-left: 1050px;margin-top:20px">
+<span  style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #000000;margin-top: 10px;margin-left: 1100px;font-size: 17px;background-color: #fcfdff;padding: 5px 10px;border-radius: 6px;">Register</span>
+<span  style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #000000;margin-top: 10px;margin-left: 1200px;font-size: 17px;background-color: #fcfdff;padding: 5px 10px;border-radius: 6px;">sign in</span>
 
   <input class="head"type="search" name="header" id="head" value="search..."></div>
 
@@ -143,5 +147,14 @@ height: 60px;width: 150px;position: absolute;margin-top: -450px;border-radius: 5
 <span style="position: absolute;  margin-top: -265px;margin-left: 1000px;color:#fcfeff;">book flight+hotel at the same time</span>
 
 </div>
-
+<div  class="end">
+<div class="div-end"></div>
+<span class="span-book">book it.love it.</span>
+<span class="span-from">from cozy country homes to funky city apartments</span>
+<div style="background-color: #fcfeff;width: 500px;border: 3px solid yellow;position: absolute;margin-top: -180px;height: 50px;padding-top: 8px;color: gainsboro;font-size: 20px;">where are you going?</div>
+<div style="background-color: #fcfeff;border: 3px solid yellow;position: absolute;margin-top: -180px;margin-left: 500px;height: 50px;width: 250px;text-align: center;padding-top: 10px;">check-in _ check-out</div>
+<div style="background-color: #fcfeff;width: 321px;border: 3px solid yellow;position: absolute;margin-top: -180px;text-align: center;padding-top: 7px;margin-left: 750px;height: 50px;">2 adults . 0 children </div>
+<div style="background-color: #1a1de5;border: 3px solid #f5f51e;position: absolute;margin-top: -180px;margin-left: 1050px;width: 100px;height: 50px;text-align: center;padding-top: 6px;color: white;
+">search</div>
+</div>
     </body>
