add inputs and labels

--- a/hotell.html
+++ b/hotell.html
@@ -154,7 +154,11 @@ height: 60px;width: 150px;position: absolute;margin-top: -450px;border-radius: 5
 <div style="background-color: #fcfeff;width: 500px;border: 3px solid yellow;position: absolute;margin-top: -180px;height: 50px;padding-top: 8px;color: gainsboro;font-size: 20px;">where are you going?</div>
 <div style="background-color: #fcfeff;border: 3px solid yellow;position: absolute;margin-top: -180px;margin-left: 500px;height: 50px;width: 250px;text-align: center;padding-top: 10px;">check-in _ check-out</div>
 <div style="background-color: #fcfeff;width: 321px;border: 3px solid yellow;position: absolute;margin-top: -180px;text-align: center;padding-top: 7px;margin-left: 750px;height: 50px;">2 adults . 0 children </div>
-<div style="background-color: #1a1de5;border: 3px solid #f5f51e;position: absolute;margin-top: -180px;margin-left: 1050px;width: 100px;height: 50px;text-align: center;padding-top: 6px;color: white;
-">search</div>
+<div style="background-color: #1a1de5;border: 3px solid #f5f51e;position: absolute;margin-top: -180px;margin-left: 1050px;width: 100px;height: 50px;text-align: center;padding-top: 6px;color: white;">search</div>
+<input type="checkbox"  style="position: absolute; margin-top: -100px;margin-left: 20px;"><label for="work"  style="position: absolute; margin-top: -100px;margin-left: 45px;">A am traveling for work</label>
+<label for="yes" style="position: absolute; margin-top: -100px; margin-left: 500px;" >Going on a skiing or snowboarding trip?</label> <input type="radio"  style="position: absolute; margin-top: -100px; margin-left: 500px;"><label form="yes" style="position: absolute; margin-top: -100px; margin-left: 500px;">yes</label><input type="radio"  style="position: absolute; margin-top: -100px; margin-left: 500px;"><label form="yes" style="position: absolute; margin-top: -100px; margin-left: 500px;">no</label>
 </div>
+
+</div>
+
     </body>
