--- a/hotell.html
+++ b/hotell.html
@@ -158,7 +158,11 @@ height: 60px;width: 150px;position: absolute;margin-top: -450px;border-radius: 5
 <input type="checkbox"  style="position: absolute; margin-top: -50px;margin-left: 20px;"><label for="work"  style="position: absolute; margin-top: -50px;margin-left: 45px;">A am traveling for work</label>
 <label for="yes" style="position: absolute; margin-top: -50px; margin-left: 250px;" >Going on a skiing or snowboarding trip?</label> <input type="radio"  style="position: absolute; margin-top: -40px; margin-left: 580px;"><label form="yes" style="position: absolute; margin-top: -50px; margin-left: 600px;">yes</label><input type="radio"  style="position: absolute; margin-top: -40px; margin-left: 650px;"><label form="yes" style="position: absolute; margin-top: -50px; margin-left: 670px;">no</label>
 </div>
-
+<img class="du" src="dubai.jpg">
+<img class="ca" src="ca.jpg">
+<img class="la" src="la.jpg">
+<img class="is" src="isjpg.jpg">
+<img class="ps" src="pa.jpg">
 </div>
 
     </body>
