--- a/hotell.html
+++ b/hotell.html
@@ -34,7 +34,7 @@
 <div class="div-to">
     <img src="booklium.jpg" class="booklium">
     <div style="position: absolute;" class="div-unnamed">
-      <img src="unnamed.jpg" alt="unnamed" class="unnamed">
+      <img src="brr.jpg" alt="unnamed" class="unnamed">
       <p style=" margin-top: -550px;margin-left: 1000px; color: aliceblue;">check villas for the best vacation near the sea</p>
   
       <p style=" margin-top: -550px;margin-left: 1000px;color: aliceblue;">book villa quickly & safely</p>
@@ -159,10 +159,12 @@ height: 60px;width: 150px;position: absolute;margin-top: -450px;border-radius: 5
 <label for="yes" style="position: absolute; margin-top: -50px; margin-left: 250px;" >Going on a skiing or snowboarding trip?</label> <input type="radio"  style="position: absolute; margin-top: -40px; margin-left: 580px;"><label form="yes" style="position: absolute; margin-top: -50px; margin-left: 600px;">yes</label><input type="radio"  style="position: absolute; margin-top: -40px; margin-left: 650px;"><label form="yes" style="position: absolute; margin-top: -50px; margin-left: 670px;">no</label>
 </div>
 <img class="du" src="dubai.jpg">
+
+<img class="is" src="isjpg.jpg">
 <img class="ca" src="ca.jpg">
 <img class="la" src="la.jpg">
-<img class="is" src="isjpg.jpg">
-<img class="ps" src="pa.jpg">
+<img src="pa.jpg" class="pa">
+
 </div>
 
     </body>
