--- a/hotell.html
+++ b/hotell.html
@@ -16,17 +16,23 @@
 <div class="header" style="display: flex; z-index: 1;opacity: 1;position: fixed;"><span   style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #fcfeff;margin-left: 20px;margin-top: 15px;font-size: 25px;">hotel2</span>
   <span  style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #1453db;margin-top: 15px;margin-left: 90px;font-size: 25px;" >.com</span>
   
-  <span style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #fcfdff;margin-top: 60px;margin-left: 20px;font-size: 15px;background-color:#3e4d6d;padding:7px 5px;" >Accommodations</span>   
-  <span  style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #fcfdff;margin-top: 65px;margin-left: 170px;font-size: 15px;">Flights</span>
-  <span  style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #fcfdff;margin-top: 65px;margin-left: 250px;font-size: 15px;">Car Rentals</span>
-  <span  style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #fcfdff;margin-top: 65px;margin-left: 350px;font-size: 15px;">airport Taxis</span>
+  <span  style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #fcfdff;margin-top: 60px;margin-left: 20px;font-size: 15px;background-color:#3e4d6d;padding:7px 5px;" >Accommodations</span>   
+  <span class="span-head" style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #fcfdff;margin-top: 65px;margin-left: 165px;font-size: 15px;">Flights</span>
+  <span  class="span-head" style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #fcfdff;margin-top: 65px;margin-left: 245px;font-size: 15px;">Car Rentals</span>
+  <span  class="span-head" style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #fcfdff;margin-top: 65px;margin-left: 345px;font-size: 15px;">airport Taxis</span>
 
   <span  style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #fcfdff;margin-top: 18px;margin-left: 1020px;font-size: 15px;">IRR</span>
 <img src="images.png" alt="img" style="width: 22px;height: 15px;margin-left: 1050px;margin-top:20px">
 <span  style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #000000;margin-top: 10px;margin-left: 1100px;font-size: 17px;background-color: #fcfdff;padding: 5px 10px;border-radius: 6px;">Register</span>
 <span  style="display: flex; z-index: 1;opacity: 1;position: fixed;color: #000000;margin-top: 10px;margin-left: 1200px;font-size: 17px;background-color: #fcfdff;padding: 5px 10px;border-radius: 6px;">sign in</span>
 
-  <input class="head"type="search" name="header" id="head" value="search..."></div>
+  <input class="head"type="search" name="header" id="head" value="search">
+  
+  <i class="fas fa-search" style="z-index: 1;position: absolute; margin-top: 55px;margin-left: 1360px;"></i>
+</div>
+
+
+
 
   <img src="mg.jpg" class="img">
 
@@ -35,7 +41,7 @@
     <img src="booklium.jpg" class="booklium">
     <div style="position: absolute;" class="div-unnamed">
       <img src="brr.jpg" alt="unnamed" class="unnamed">
-      <p style=" margin-top: -550px;margin-left: 1000px; color: aliceblue;">check villas for the best vacation near the sea</p>
+      <p style=" margin-top: -450px;margin-left: 1050px; color: aliceblue;font-size: 30px;">check villas for   the best vacation near the sea</p>
   
       <p style=" margin-top: -550px;margin-left: 1000px;color: aliceblue;">book villa quickly & safely</p>
       <input type="search" class="input-in" id="in">
@@ -52,46 +58,35 @@
 <div class="div-blur2">
   <img src="mg.jpg" class="img" style="opacity: 0.5px;">
 <div class="div-black"></div>
-<div style="background-color: #423f3f;
+<div  class="div-flight" style="background-color: #423f3f;
 height: 80px;width: 60px;position: absolute;margin-top: -550px;border-radius: 5px;margin-left: 250px;">
-<i class="fas fa-home (1)"></i>
+<i class="fas fa-home (1)" style="font-size: 10px;padding-top:30px;position: absolute;">hotel</i>
 </div>
-<div style="background-color: #423f3f;
+<div style="background-color: rgb(32, 32, 207);
 height: 80px;width: 60px;position: absolute;margin-top: -550px;border-radius: 5px;margin-left: 320px;">
-<i class="fas fa-fli"></i>
+<i class="fas fa-flight" style="font-size: 10px;padding-top:30px;position: absolute;padding-left: 6px;">flight</i>
 
 </div>
 <div style="background-color: #423f3f;
 height: 80px;width: 60px;position: absolute;margin-top: -550px;border-radius: 5px;margin-left: 390px;">
-<i class="fas fa-ship"></i>
+<i class="fas fa-ship"  style="font-size: 10px;padding-top:30px;position: absolute;">cruises</i>
 
 </div>
 <div style="background-color: #423f3f;
 height: 80px;width: 60px;position: absolute;margin-top: -550px;border-radius: 5px;margin-left: 460px;">
-<i class="fas fa-car-crash"></i>
+<i class="fas fa-car-crash"  style="font-size: 13px;padding-top:30px;position: absolute;margin-left: 5px;">car</i>
 
 </div>
 
 <div style="background-color: #423f3f;
-height: 80px;width: 60px;position: absolute;margin-top: -550px;border-radius: 5px;margin-left: 530px;">
-<i class="fas fa-search2"></i>
+height: 80px;width:60px;position: absolute;margin-top: -550px;border-radius: 5px;margin-left: 530px;">
 
-</div>
-<div style="background-color: #423f3f;
-height: 80px;width: 60px;position: absolute;margin-top: -550px;border-radius: 5px;margin-left: 600px;">
-
-
-</div>
-
-<div style="background-color: #423f3f;
-height: 80px;width:100px;position: absolute;margin-top: -550px;border-radius: 5px;margin-left: 6700px;">
-
-<i class="fas fa-search"></i>
+<i class="fas fa-search" class="fas fa-car-crash"  style="font-size: 11px;padding-top:30px;position: absolute;">search</i>
 </div>
 <div style="background-color: rgb(32, 32, 207);
 height: 60px;width: 100px;position: absolute;margin-top: -450px;border-radius: 5px;margin-left: 250px; text-align: center;color: aliceblue;font-size: 17px;padding-bottom: -5px;"><span style="
   position: absolute;
-  font-size: 15px;
+  font-size: 13px;
   margin-right: 50px;margin-left: -13px;
   ">Flight + Hotel</span>
 </div>
@@ -99,27 +94,27 @@ height: 60px;width: 100px;position: absolute;margin-top: -450px;border-radius: 5
 
 <div style="background-color: #423f3f;
 height: 60px;width: 150px;position: absolute;margin-top: -450px;border-radius: 5px;margin-left: 350px; text-align: center;color: aliceblue;font-size: 17px;"> <span    style=" position: absolute;
-  font-size: 15px;
+  font-size: 13px;
   margin-right: 50px;margin-left: -13px;">Flight + Hotel </span> 
 
 </div>
 
 <div style="background-color: #423f3f;
 height: 60px;width: 150px;position: absolute;margin-top: -450px;border-radius: 5px;margin-left: 490px; text-align: center;color: aliceblue;font-size: 17px;">    <span style=" position: absolute;
-  font-size: 15px;margin-top:15px;
+  font-size: 13px;margin-top:15px;
   margin-left: -45px;">Flight+Car+cruises</span>
 </div>
 
 <div style="background-color: #423f3f;
 height: 60px;width: 150px;position: absolute;margin-top: -450px;border-radius: 5px;margin-left: 630px; text-align: center;color: aliceblue;font-size: 17px;"><span style=" position: absolute;
-  font-size: 15px;
+  font-size: 13px;
   margin-left: -30px;
   margin-top: 15px;"> hotel+car+flight
 </span></div>
 <label for="form" style="position: absolute;margin-top: -360px;margin-left: 250px;color: #fcfeff;;">flying form</label><br>
 <input type="text" class="form" id="form" value="city or airport...." >
 
-<label for="to" style="position: absolute;margin-top: -380px;margin-left: 540px;color: #fcfeff;;">flying to</label><br>
+<label for="to" style="position: absolute;margin-top: -383px;margin-left: 540px;color: #fcfeff;;">flying to</label><br>
 <input type="text" class="to" id="to" value="city or airport...." >
 
 <label for="departing" style="position: absolute; margin-top: -315px;margin-left: 250px;color: #fcfeff;;">departing </label><br>
@@ -164,7 +159,7 @@ height: 60px;width: 150px;position: absolute;margin-top: -450px;border-radius: 5
 <img class="ca" src="ca.jpg">
 <img class="la" src="la.jpg">
 <img src="pa.jpg" class="pa">
-
+<i class="fas fa-flights" style="z-index: 1;"></i>
 </div>
 
     </body>
