edit margin and padding

--- a/hotell.html
+++ b/hotell.html
@@ -124,13 +124,13 @@ height: 60px;width: 150px;position: absolute;margin-top: -450px;border-radius: 5
 <label for="returning" style="position: absolute;  margin-top: -335px; margin-left: 420px;color: #fcfeff;;">returning </label><br>
 <input type="text" class="returning" id="returning" value="mm/dd/yyyy" >
 
-<label for="room" style="position: absolute;   margin-top: -350px;margin-left: 590px;color: #fcfeff;;">room</label><br>
+<label for="room" style="position: absolute;   margin-top: -365px;margin-left: 590px;color: #fcfeff;;">room</label><br>
 <input type="text" class="room" id="room" value="1 >" >
 
-<label for="adults" style="position: absolute;  margin-top: -368px;margin-left: 640px;color: #fcfeff;;">adults(18)</label><br>
+<label for="adults" style="position: absolute;  margin-top: -386px;margin-left: 640px;color: #fcfeff;;">adults(18)</label><br>
 <input type="text" class="adults" id="adults" value="2  >" >
 
-<label for="child" style="position: absolute;  margin-top: -386px;margin-left: 710px;color: #fcfeff;;">adults(18)</label><br>
+<label for="child" style="position: absolute;  margin-top: -410px;margin-left: 720px;color: #fcfeff;;">child</label><br>
 <input type="text" class="child" id="child" value="0   >" >
 <br><br><input type="checkbox" style="position: absolute; margin-top:-340px;margin-left: 240px;"><label style="position: absolute; margin-top:-343px;margin-left: 265px;color:#fcfeff;">i only need a hotel for part of my stay</label>
 <span style="position: absolute; margin-top:-320px;margin-left: 250px;color:#fcfeff;">advanced options >></span>
