delet some image

--- a/hotell.html
+++ b/hotell.html
@@ -155,11 +155,11 @@ height: 60px;width: 150px;position: absolute;margin-top: -450px;border-radius: 5
 </div>
 <img class="du" src="dubai.jpg">
 
-<img class="is" src="isjpg.jpg">
-<img class="ca" src="ca.jpg">
-<img class="la" src="la.jpg">
-<img src="pa.jpg" class="pa">
-<i class="fas fa-flights" style="z-index: 1;"></i>
+<img class="is" src="isjpg.jpg"> 
+<img class="ca" src="ca.jpg"> 
+<img class="lo" src="la.jpg"> 
+<img src="pa.jpg" class="pa">  
+
 </div>
 
     </body>
